--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Website</title>
+    <title>Meu Site Legal</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <header>
+      <h1>Bem-vindo ao Meu Site!</h1>
+      <nav>
+        <ul>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#servicos">Serviços</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <main>
-      <h1>Welcome to My Website</h1>
+      <section id="sobre">
+        <h2>Sobre Nós</h2>
+        <p>Esta é uma descrição breve sobre o site e sua finalidade.</p>
+      </section>
+
+      <section id="servicos">
+        <h2>Serviços</h2>
+        <p>Listamos aqui os serviços que oferecemos.</p>
+      </section>
+
+      <section id="contato">
+        <h2>Contato</h2>
+        <p>Entre em contato conosco através do e-mail: exemplo@dominio.com</p>
+      </section>
     </main>
-    <script src="index.js"></script>
+
+    <footer>
+      <p>&copy; 2024 Meu Site Legal. Todos os direitos reservados.</p>
+    </footer>
   </body>
 </html>
