--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 Meu Site Legal. Todos os direitos reservados.</p>
+      <p>
+        &copy; 2024 Meu Site Legal. Todos os direitos reservados ao open source.
+      </p>
     </footer>
   </body>
 </html>
