--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
     </main>
 
     <footer>
-      <p>
-        &copy; 2024 Meu Site Legal. Todos os direitos reservados ao open source.
-      </p>
+      <p>&copy; 2024 Meu Site Legal. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
